* Mobile version alignment issue fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,7 +130,10 @@ nav ul li {
 /* More about */
 .more-about {
   background-color: var(--bg-color);
-  padding: 1rem 6rem;
+  padding: 1rem 6rem;    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .more-about h2 {
@@ -428,7 +431,6 @@ footer {
   list-style: none;
   display: flex;
   flex-direction: column; 
-  margin-left: 13rem;
 }
 .about-me-list li::before {
   content: "📌";
